Add product indexes, update PriceResponse and models